# claw

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  claw.service  config.yaml  config.yaml.example  docker-compose.yml  install.sh  llama-swap-config.yaml  pyproject.toml
.github/workflows/: ci.yml
claw-android/: build.gradle.kts  settings.gradle.kts
claw-android/app/: build.gradle.kts  proguard-rules.pro
docs/: DEPLOYMENT.md  IMAGE_HANDLING.md  TRAINING.md  TROUBLESHOOTING.md
mcp_tools/browser/: server.py
mcp_tools/gemini/: server.py
mcp_tools/gmail/: server.py
mcp_tools/google_auth/: auth.py  setup_auth.py
mcp_tools/google_calendar/: server.py
scripts/: backup.sh  deploy.sh  google_auth.py  ingest_dencar.py  ingest_pdfs.py  migrate_dencar_scope.py  publish-apk.sh  restore.sh  setup-wireguard.sh
tests/: conftest.py  test_admin_auth.py  test_admin_routes.py  test_agent.py  test_api_key.py  test_audio_capture.py  test_chime.py  test_compute.py  test_config.py  test_conversation.py  test_gemini_tool.py  test_gmail_tool.py  test_google_calendar_tool.py  test_llm_client.py  test_local_calendar_tool.py  test_mcp_client.py  test_mcp_registry.py  test_mcp_router.py  test_memory_store.py  test_music_player.py  test_notes_tool.py  test_remote_api.py  test_retriever.py  test_scheduler.py  test_secret_store.py  test_sse.py  test_system_control_tool.py  test_transcriber.py  test_tts_manager.py  test_wake_word.py  test_weather_tool.py  test_youtube_music_tool.py
training/: deploy_model.sh  hey_claw_config.yaml  setup_training_env.sh  train.sh
(+124 files in other folders)
